sumo/tests/dfrouter/errors/detector_flow_files/false_detectors_flows_file2_deprecated/errors.dfrouter
Warning: Please note that using ';' as list separator is deprecated.
 From 1.0 onwards, only ',' will be accepted.
Error: The detector-flow-file 'xxx.txt' can not be opened.
Quitting (on error).
